fix navbar bg color transparency on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -144,6 +144,9 @@ aside {
                 }
             }
         }
+        &.affix-top {
+            background-color: rgb(0 0 0 / 29%);
+        }
     }
 }
 
